# devquote

./: README.md  pyproject.toml
devquote/: __init__.py  ai.py  cli.py  core.py  quotes.json  update_ai_then_delete.py
devquote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
