[project]
name = "devquote"
version = "0.1.0"
description = "A CLI tool to get dev quotes with optional AI support"
authors = [{ name = "Your Name", email = "your@email.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
devquote = "devquote.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
